cmake_minimum_required(VERSION 3.12)
project(LiquidSimulator)

set(CMAKE_CXX_STANDARD 14)

add_executable(LiquidSimulator
        assets/font.png
        assets/heightmap.png
        bin/Debug/OpenTK.dll
        bin/Debug/OpenTK.dll.config
        bin/Debug/template.exe
        bin/Debug/template.exe.config
        bin/Debug/template.pdb
        bin/Release/OpenTK.dll
        bin/Release/OpenTK.dll.config
        bin/Release/template.exe
        bin/Release/template.exe.config
        bin/Release/template.pdb
        obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
        obj/Debug/template.csproj.CopyComplete
        obj/Debug/template.csproj.CoreCompileInputs.cache
        obj/Debug/template.csproj.FileListAbsolute.txt
        obj/Debug/template.csprojAssemblyReference.cache
        obj/Debug/template.exe
        obj/Debug/template.pdb
        obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
        obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
        obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
        obj/Release/template.csproj.CopyComplete
        obj/Release/template.csproj.CoreCompileInputs.cache
        obj/Release/template.csproj.FileListAbsolute.txt
        obj/Release/template.csprojAssemblyReference.cache
        obj/Release/template.exe
        obj/Release/template.pdb
        obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
        obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
        obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
        OpenTK/Release/OpenTK.dll
        OpenTK/Release/OpenTK.dll.config
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/dotnet5.4/System.Numerics.Vectors.dll
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/MonoAndroid10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/MonoTouch10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/net46/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/net46/System.Numerics.Vectors.dll
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/portable-net45+win8/System.Numerics.Vectors.dll
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/xamarinios10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/lib/xamarinmac20/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/dotnet5.4/System.Numerics.Vectors.dll
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/MonoAndroid10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/MonoTouch10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/net46/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/net46/System.Numerics.Vectors.dll
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/xamarinios10/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/ref/xamarinmac20/_._
        packages/System.Numerics.Vectors.4.1.1-beta-23516/System.Numerics.Vectors.4.1.1-beta-23516.nupkg
        packages/repositories.config
        Properties/AssemblyInfo.cs
        Shapes/Sphere.cs
        App.config
        clean.bat
        game.cs
        packages.config
        surface.cs
        template.cs
        template.csproj
        template.csproj.user
        template.sln
        template.v12.suo
        Util.cs)
